--- a/MOD_UI/src/app/admin-dashboard/all-payments/all-payments.component.html
+++ b/MOD_UI/src/app/admin-dashboard/all-payments/all-payments.component.html
@@ -2,11 +2,11 @@
 
 <div class="row">
   <div class="col-md-12">
-      <h3 class="text-center text-capitalize p-4">All Payments Users</h3>
+      <h3>User Payment Details</h3>
 
-      <table class="my-5 table table-sm table-striped table-responsive-sm " width="50%">
+      <table width="50%">
         <thead>
-          <tr class="thead-dark">
+          <tr >
             <th scope="col">User Id</th>
             <th scope="col">Technology</th>
             <th scope="col">Fees</th>
@@ -33,11 +33,11 @@
   
 <div class="row">
     <div class="col-md-12">
-        <h3 class="text-center text-capitalize p-4">All Payments Mentors</h3>
+        <h3 >Mentor Payments Details</h3>
 
-        <table class="my-5 table table-striped table-responsive-sm table-sm" width="50%">
+        <table width="50%">
           <thead>
-            <tr class="thead-dark">
+            <tr >
               <th scope="col">Trainer Id</th>
               <th scope="col">Technology</th>
               <th scope="col">Fees</th>
@@ -59,9 +59,7 @@
             </tr>
           </tbody>
         </table>
-        <!-- <div *ngIf="!userPayment">
-            <p class="text-muted text-center">No Payment Record</p>
-        </div> -->
+      
     </div>
   </div>
   
