--- a/MOD_UI/src/app/trainer-register/trainer-register.component.html
+++ b/MOD_UI/src/app/trainer-register/trainer-register.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-4">
             <div class="card card-signin">
                 <div class="card-body">
-                    <h3 class="card-title text-center">Mentor Sign Up</h3>
+                    <h3 class="card-title text-center">Mentor SignUp</h3>
                     <br/>
                     <div class="form-row">
                         <div class="form-group col">
@@ -57,7 +57,7 @@
                                 <div class="form-row" formGroupName="Passwords">
                                     <div class="form-group col required">
                                         <label>Enter Password</label>
-                                        <input type="password" class="form-control" formControlName="password" style="border-radius: 1.5rem" placeholder="enter password">
+                                        <input type="password" class="form-control" formControlName="password" style="border-radius: 1.5rem" placeholder="password">
                                         <small class="text-danger"
                                             *ngIf="TrainerRegister.get('Passwords.password').touched && TrainerRegister.get('Passwords.password').errors?.required">This
                                             field is mandatory</small>
