--- a/MOD_UI/src/app/user-dashboard/edit-profile/edit-profile.component.html
+++ b/MOD_UI/src/app/user-dashboard/edit-profile/edit-profile.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-4">
             <div class="card card-signin">
                 <div class="card-body">
-                    <h3 class="card-title text-center">Edit Trainer Profile</h3>
+                    <h3 class="card-title text-center">Edit Profile</h3>
 
                     <div class="my-4" *ngIf="model">
 
