--- a/MOD_UI/src/app/admin-dashboard/add-block/add-block.component.html
+++ b/MOD_UI/src/app/admin-dashboard/add-block/add-block.component.html
@@ -1,9 +1,9 @@
 <section class="my-2 container" *ngIf="users">
-  <h3 class="text-center text-capitalize p-4">Users</h3>
+  <h3 class="text-center text-capitalize p-4">Block/Unblock Users</h3>
 
-  <table class="my-5 table table-striped text-center table-responsive-sm table-sm" width="50%">
+  <table  width="50%">
     <thead>
-      <tr class="thead-dark">
+      <tr >
 
         <th scope="col">UserName</th>
         <th scope="col">Email</th>
@@ -31,12 +31,12 @@
 </section>
 
 <section class="my-2 container" *ngIf="mentors">
-  <h3 class="text-center text-capitalize p-4">Mentors</h3>
+  <h3 class="text-center text-capitalize p-4"> Block/Unblock Mentors</h3>
 
 
-  <table class="my-5 table table-striped text-center table-responsive-sm table-sm" width="50%">
+  <table  width="50%">
       <thead>
-        <tr class="thead-dark">
+        <tr>
   
           <th scope="col">UserName</th>
           <th scope="col">Email</th>
