--- a/MOD_UI/src/app/admin-dashboard/add-remove/add-remove.component.html
+++ b/MOD_UI/src/app/admin-dashboard/add-remove/add-remove.component.html
@@ -1,5 +1,5 @@
 <section class="my-2 container">
-  <h3 class="text-center text-capitalize p-4">Technologies We Teach</h3>
+  <h3 class="text-center text-capitalize p-4">Add/Delete Technology</h3>
 
   <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-login">
@@ -7,7 +7,7 @@
 
         <form #myForm="ngForm" [formGroup]="techAdd" autocomplete="off">
           <div class="modal-header">
-            <h4 class="modal-title">Add Skill</h4>
+            <h4 class="modal-title">Add Technology</h4>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           </div>
           <div class="modal-body">
@@ -45,9 +45,9 @@
 
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-success pull-right" (click)="addingTechnology();myForm.reset()"
-              [disabled]="!techAdd.valid" >ADD</button>
-              <button type="button" class="btn btn-danger btn-md" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-info pull-right" (click)="addingTechnology();myForm.reset()"
+              [disabled]="!techAdd.valid" >Add</button>
+              <button type="button" class="btn btn-danger btn-md" data-dismiss="modal">Cancel</button>
           </div>
         </form>
       </div>
@@ -55,13 +55,13 @@
   </div>
 
   <div class="container">
-    <button type="button" class="btn-success" data-toggle="modal" data-target="#myModal">+</button>
+    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add</button>
   </div>
+<br>
 
-
-  <table class="my-5 table table-sm" width="50%">
+  <table width="50%">
     <thead>
-      <tr class="thead-dark">
+      <tr>
         <th scope="col">Name</th>
         <th scope="col">Toc</th>
         <th scope="col">Fees</th>
