--- a/MOD_UI/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/MOD_UI/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -1,27 +1,40 @@
 <div class="bg-img">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
-      <a class="navbar-brand" routerLinkActive="true" style="color: darkslategray;font-weight: bold">Ur Mentor</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/home" routerLinkActive="true"  style="color: forestgreen;font-weight: bold">Home <span class="sr-only">(current)</span></a>
-          </li>
-        </div>
-        <ul class="navbar-nav">
-   
-        </ul>
-        <a class="nav-link"> <button class="btn btn-sm btn-1" type="submit" (click)="notification()" style="font-weight: bold;">Notification</button></a>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">Ur Mentor</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/home" routerLinkActive="true">Home</a>
+      </li>
+     
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Dashboard
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" routerLink="current-trainings-info">Current-Training</a>
+            <a class="dropdown-item" routerLink="completed-trainings-info"  >Completed-Training</a>
+            <a class="dropdown-item" routerLink="add-block-user-mentor" >Block/Unblock</a>
+            <a class="dropdown-item" routerLink="add-remove-technology" >Edit Technology</a>
+            <a class="dropdown-item" routerLink="all-payments" >Payment Details</a>
+          </div>
+        </li>
+    
+        <li class="nav-item"><a class="nav-link" (click)="notification()" > Notification</a></li>
+        <li class="nav-item"><a  class="nav-link" (click)="logout()" >Logout</a></li>
       
-        <a class="nav-link"> <button class="btn btn-sm btn-2" type="submit" (click)="logout()" style="font-weight: bold;">Logout</button></a>
-      </div>
-    </nav>
+     
+      </ul>
+  </nav>
+
   
+  <div class="footer">
+    <p>CopyRights@2019</p>
   </div>
-  
+</div>
+
+
+
+
+
+   
