--- a/MOD_UI/src/app/trainer-dashboard/trainer-edit-profile/trainer-edit-profile.component.html
+++ b/MOD_UI/src/app/trainer-dashboard/trainer-edit-profile/trainer-edit-profile.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-4">
             <div class="card card-signin">
                 <div class="card-body">
-                    <h3 class="card-title text-center">Edit Trainer Profile</h3>
+                    <h3 class="card-title text-center">Edit Mentor Profile</h3>
 
                     <div class="my-4" *ngIf="model">
 
@@ -35,11 +35,7 @@
                                 <input type="text" class="form-control" [(ngModel)]="model.yearOfExperience"
                                     name="yearOfExperience" required="required">
                             </div>
-                            <!-- <label>Linkedin Url</label>
-                            <div class="form-group">
-                                <input type="text" class="form-control" [(ngModel)]="model.linkedinUrl"
-                                    name="linkedinUrl" required="required">
-                            </div> -->
+                          
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary btn-lg btn-block">Edit</button>
                             </div>
