--- a/MOD_UI/src/app/trainer-dashboard/trainer-profile/trainer-profile.component.html
+++ b/MOD_UI/src/app/trainer-dashboard/trainer-profile/trainer-profile.component.html
@@ -6,10 +6,10 @@
     <div class="row" *ngIf="model">
         <div class="col-sm-4 text-center">
             <img class="img-thumbnail m-3" alt="NA" src="../../../assets/img/user.jpg"><br>
-           <button type="button" class="btn btn-info btn-sm m-4" (click)="moveToEdit(model.id)">Edit Profile</button>
+            <button type="button" class="btn btn-info btn-sm m-4" (click)="moveToEdit(model.id)">Edit Profile</button>
         </div>
         <div class="col-sm-8">
-            <div class="modal-body" >
+            <div class="modal-body">
                 <table class="table table-striped  table-bordered">
                     <tbody>
                         <tr>
@@ -23,16 +23,13 @@
                         </tr>
 
 
-                        <!-- <tr>
-                            <td>User Name</td>
-                            <td>{{model.username}}</td>
-                        </tr> -->
+
 
                         <tr>
                             <td>Mobile Number</td>
                             <td>{{model.contactnumber}}</td>
                         </tr>
-                        
+
                         <tr>
                             <td>Skill</td>
                             <td>{{model.trainerTechnology}}</td>
@@ -42,11 +39,8 @@
                             <td>Experience</td>
                             <td>{{model.yearOfExperience}}</td>
                         </tr>
+
                         
-                        <!-- <tr>
-                            <td>LinkedIn Url</td>
-                            <td>{{model.linkedinUrl}}</td>
-                        </tr> -->
 
                     </tbody>
                 </table>
@@ -55,17 +49,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-<!-- <app-navbar></app-navbar>
     
     <div class="container p-2">
     
@@ -84,17 +67,17 @@
                         <tbody>
                             <tr>
                                 <td>Name</td>
-                                <td>Shivam Sharma</td>
+                                <td>Abdul</td>
                             </tr>
     
                             <tr>
                                 <td>Email-id</td>
-                                <td>shivamsharma@gmail.com</td>
+                                <td>Abdul@gmail.com</td>
                             </tr>
     
                             <tr>
                                 <td>Date Of Birth</td>
-                                <td>26/07/1997</td>
+                                <td>08/03/1997</td>
                             </tr>
     
                             <tr>
@@ -104,12 +87,12 @@
     
                             <tr>
                                 <td>Mobile Number</td>
-                                <td>987654321</td>
+                                <td>9790017945</td>
                             </tr>
     
                             <tr>
                                 <td>Date Enrolled</td>
-                                <td>26/10/2019</td>
+                                <td>22/11/2019</td>
                             </tr>
     
     
@@ -120,4 +103,4 @@
             </div>
         </div>
     </div>
-    <app-footer></app-footer> -->
+    <app-footer></app-footer>
