--- a/MOD_UI/src/app/user-dashboard/current-trainings/current-trainings.component.html
+++ b/MOD_UI/src/app/user-dashboard/current-trainings/current-trainings.component.html
@@ -1,9 +1,9 @@
 <section class="my-2 container" *ngIf="curT">
-  <h3 class="text-center text-capitalize p-4">Current Trainings</h3>
+  <h3 >Current Trainings</h3>
 
-  <table class="my-5 table table-striped text-center table-responsive-sm table-sm" width="50%">
+  <table  width="50%">
     <thead>
-      <tr class="thead-dark">
+      <tr>
         <th scope="col">Techonolgy</th>
         <th scope="col">Trainer Name</th>
         <th scope="col">Start Date</th>
