--- a/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.css
+++ b/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.css
@@ -1,6 +1,4 @@
-.table {
-    border-radius: 5px;
-    width: 50%;
-    margin: 0px auto;
-    float: none;
-}
+td, th {
+    border: 1px solid #dddddd;
+    padding: 15px;
+   }
