--- a/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.html
+++ b/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.html
@@ -1,10 +1,10 @@
 <section class="my-2 container text-center">
     <div class="row">
         <div class="col-md-12">
-            <h3 class="text-center text-capitalize p-4">Payment - Info</h3>
-            <table class="my-5 table table-striped table-responsive-sm table-sm" width="50%">
+            <h3>Payment Details</h3>
+            <table  width="50%">
                 <thead>
-                    <tr class="thead-dark">
+                    <tr>
                         <th scope="col">Techonolgy</th>
                         <th scope="col">Payment Status</th>
                         <th scope="col">Tax</th>
