--- a/MOD_UI/src/app/user-dashboard/udashboard/udashboard.component.html
+++ b/MOD_UI/src/app/user-dashboard/udashboard/udashboard.component.html
@@ -1,6 +1,4 @@
-
-<section class="my-5 container" >
-  <div class="jumbotron" style="background-color: mediumspringgreen">
-    <h1 class="text-center py-1" style="color: white">Welcome User</h1>
-  </div>
-</section>
+<div class="headercenter">
+  <h1>Welcome to Learning</h1>
+  <h3>Learn how real apps are built, from scratch, using the latest frameworks</h3>
+  </div> 
