--- a/MOD_UI/src/app/admin-dashboard/admin-profile/admin-profile.component.html
+++ b/MOD_UI/src/app/admin-dashboard/admin-profile/admin-profile.component.html
@@ -2,7 +2,7 @@
 <div class="container p-2">
 
     <div class="py-4 text-center">
-        <h2>User Profile</h2>
+        <h2>Profile</h2>
         <button type="button" class="float-right btn btn-success btn-sm" >Back</button>
     </div>
     <div class="row m-4">
