--- a/MOD_UI/src/app/login/login.component.html
+++ b/MOD_UI/src/app/login/login.component.html
@@ -37,12 +37,12 @@
                         <div class="form-row">
                             <div class="form-group col-md-12" style="text-align: center">
                                 <button class="btn btn-lg btn-info btn-block" [disabled]="!UserLogin.valid" 
-                                style="border-radius: 1.8rem">Sign in</button>
+                                style="border-radius: 1.8rem">Login</button>
                             </div>
                         </div>
                     </form>
 
-                    <div class="text-center my-2">
+                    <div class="text-center my-2">  
                         <p>Dont have an account? <br/>
                             <a class="text-center" routerLink="/user-register" style="color:skyblue">Register as User</a><br/>
                             <a class="text-center" routerLink="/trainer-register" style="color: skyblue">Register as Mentor</a>
