--- a/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.html
+++ b/MOD_UI/src/app/user-dashboard/payment-info/payment-info.component.html
@@ -1,7 +1,8 @@
-<section class="my-2 container text-center">
+<section class="my-2 container ">
     <div class="row">
         <div class="col-md-12">
             <h3>Payment Details</h3>
+            <br>
             <table  width="50%">
                 <thead>
                     <tr>
