--- a/MOD_UI/src/app/trainer-dashboard/trainer-profile/trainer-profile.component.html
+++ b/MOD_UI/src/app/trainer-dashboard/trainer-profile/trainer-profile.component.html
@@ -1,16 +1,13 @@
 <div class="container p-2">
 
-    <div class="py-4 text-center">
+    <div >
         <h2>Mentor Profile</h2>
     </div>
     <div class="row" *ngIf="model">
-        <div class="col-sm-4 text-center">
-            <img class="img-thumbnail m-3" alt="NA" src="../../../assets/img/user.jpg"><br>
-            <button type="button" class="btn btn-info btn-sm m-4" (click)="moveToEdit(model.id)">Edit Profile</button>
-        </div>
+        
         <div class="col-sm-8">
             <div class="modal-body">
-                <table class="table table-striped  table-bordered">
+                <table >
                     <tbody>
                         <tr>
                             <td>Name</td>
@@ -50,57 +47,4 @@
     </div>
 </div>
     
-    <div class="container p-2">
-    
-        <div class="py-4 text-center">
-            <h2>User Profile</h2>
-            <button type="button" class="float-right btn btn-success btn-sm" (click)="backToHome()">Back</button>
-        </div>
-        <div class="row m-4">
-            <div class="col-sm-4 text-center">
-                <img class="img-thumbnail m-3" alt="NA" src="../../../assets/img/user.jpg" width="284">
-                <a href=""><button type="button" class="btn btn-info btn-md m-4">Edit Profile Picture</button></a>
-            </div>
-            <div class="col-sm-8">
-                <div class="modal-body">
-                    <table class="table table-striped  table-bordered">
-                        <tbody>
-                            <tr>
-                                <td>Name</td>
-                                <td>Abdul</td>
-                            </tr>
-    
-                            <tr>
-                                <td>Email-id</td>
-                                <td>Abdul@gmail.com</td>
-                            </tr>
-    
-                            <tr>
-                                <td>Date Of Birth</td>
-                                <td>08/03/1997</td>
-                            </tr>
-    
-                            <tr>
-                                <td>Gender</td>
-                                <td>Male</td>
-                            </tr>
-    
-                            <tr>
-                                <td>Mobile Number</td>
-                                <td>9790017945</td>
-                            </tr>
-    
-                            <tr>
-                                <td>Date Enrolled</td>
-                                <td>22/11/2019</td>
-                            </tr>
-    
-    
-                        </tbody>
-                    </table>
-                </div>
-    
-            </div>
-        </div>
-    </div>
-    <app-footer></app-footer>
+   
