--- a/MOD_UI/src/app/user-dashboard/profile/profile.component.html
+++ b/MOD_UI/src/app/user-dashboard/profile/profile.component.html
@@ -1,16 +1,13 @@
 <div class="container p-2">
 
-    <div class="py-4 text-center">
+    <div >
         <h2>User Profile</h2>
     </div>
     <div class="row" *ngIf="model">
-        <div class="col-sm-4 text-center">
-            <img class="img-thumbnail m-3" alt="NA" src="../../../assets/images/img7.png"><br>
-           <button type="button" class="btn btn-info btn-sm m-4" (click)="moveToEdit(model.id)">Edit Profile</button>
-        </div>
+      
         <div class="col-sm-8">
             <div class="modal-body" >
-                <table class="table table-striped  table-bordered">
+                <table>
                     <tbody>
                         <tr>
                             <td>Name</td>
